--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <groupId>univers</groupId>
   <artifactId>my-cicd-proj</artifactId>
   <packaging>war</packaging>
-  <version>1.2.0</version>
+  <version>1.3.0-SNAPSHOT</version>
   <name>my-cicd-proj Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <scm>
     <developerConnection>scm:git:https://ZenithKaizer:JordanDavid03@github.com/ZenithKaizer/my-cicd-proj/</developerConnection>
-    <tag>1.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <dependencies>
     <dependency>
