--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <url>http://maven.apache.org</url>
   <scm>
     <developerConnection>scm:git:https://ZenithKaizer:JordanDavid03@github.com/ZenithKaizer/my-cicd-proj/</developerConnection>
-    <tag>HEAD</tag>
+    <tag>release</tag>
   </scm>
   <dependencies>
     <dependency>
